force-app/main/default/objects/Temporal_Cobro_Pagos__c/Temporal_Cobro_Pagos__c.object-meta.xml
<CustomObject>
    <label>Temporal Cobro Pago</label>
    <nameField>
        <label>Temporal Cobro Pago</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Temporal Cobro Pagos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>