force-app/main/default/objects/Temporal_Cobro_Pagos__c/fields/CP_ALUMNO__c.field-meta.xml
<CustomField>
    <fullName>CP_ALUMNO__c</fullName>
    <label>CP_ALUMNO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>