force-app/main/default/objects/Temporal_Cobro_Pagos__c/fields/CP_ANO__c.field-meta.xml
<CustomField>
    <fullName>CP_ANO__c</fullName>
    <label>CP_ANO</label>
    <length>10</length>
    <type>Text</type>
</CustomField>