force-app/main/default/objects/Temporal_Cobro_Pagos__c/fields/CP_ASIENTO__c.field-meta.xml
<CustomField>
    <fullName>CP_ASIENTO__c</fullName>
    <label>CP_ASIENTO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>