force-app/main/default/objects/Temporal_Cobro_Pagos__c/fields/CP_BANCO__c.field-meta.xml
<CustomField>
    <fullName>CP_BANCO__c</fullName>
    <label>CP_BANCO</label>
    <length>10</length>
    <type>Text</type>
</CustomField>