force-app/main/default/objects/Temporal_Cobro_Pagos__c/fields/CP_COBPAG__c.field-meta.xml
<CustomField>
    <fullName>CP_COBPAG__c</fullName>
    <label>CP_COBPAG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>