force-app/main/default/objects/Temporal_Cobro_Pagos__c/fields/CP_CURSO__c.field-meta.xml
<CustomField>
    <fullName>CP_CURSO__c</fullName>
    <label>CP_CURSO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>