force-app/main/default/objects/Temporal_Cobro_Pagos__c/fields/CP_FECHA__c.field-meta.xml
<CustomField>
    <fullName>CP_FECHA__c</fullName>
    <label>CP_FECHA</label>
    <type>Date</type>
</CustomField>