force-app/main/default/objects/Temporal_Cobro_Pagos__c/fields/CP_IMPTOT__c.field-meta.xml
<CustomField>
    <fullName>CP_IMPTOT__c</fullName>
    <label>CP_IMPTOT</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>