force-app/main/default/objects/Temporal_Cobro_Pagos__c/fields/CP_LUGAR__c.field-meta.xml
<CustomField>
    <fullName>CP_LUGAR__c</fullName>
    <label>CP_LUGAR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>