force-app/main/default/objects/Temporal_Cobro_Pagos__c/fields/CP_MEDPAGO__c.field-meta.xml
<CustomField>
    <fullName>CP_MEDPAGO__c</fullName>
    <label>CP_MEDPAGO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>