force-app/main/default/objects/Temporal_Cobro_Pagos__c/fields/CP_MOTIVO__c.field-meta.xml
<CustomField>
    <fullName>CP_MOTIVO__c</fullName>
    <label>CP_MOTIVO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>