force-app/main/default/objects/Temporal_Cobro_Pagos__c/fields/CP_NIVEL__c.field-meta.xml
<CustomField>
    <fullName>CP_NIVEL__c</fullName>
    <label>CP_NIVEL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>