force-app/main/default/objects/Temporal_Cobro_Pagos__c/fields/CP_NUMORI__c.field-meta.xml
<CustomField>
    <fullName>CP_NUMORI__c</fullName>
    <label>CP_NUMORI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>