force-app/main/default/objects/Temporal_Cobro_Pagos__c/fields/CP_OTROS__c.field-meta.xml
<CustomField>
    <fullName>CP_OTROS__c</fullName>
    <label>CP_OTROS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>