force-app/main/default/objects/Temporal_Cobro_Pagos__c/fields/CP_SEQ__c.field-meta.xml
<CustomField>
    <fullName>CP_SEQ__c</fullName>
    <label>CP_SEQ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>