force-app/main/default/objects/Temporal_Cobro_Pagos__c/fields/CP_SIGNO__c.field-meta.xml
<CustomField>
    <fullName>CP_SIGNO__c</fullName>
    <label>CP_SIGNO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>