force-app/main/default/objects/Temporal_Cobro_Pagos__c/fields/CP_TIPALU__c.field-meta.xml
<CustomField>
    <fullName>CP_TIPALU__c</fullName>
    <label>CP_TIPALU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>