force-app/main/default/objects/Temporal_Cobro_Pagos__c/fields/CP_TIPORI__c.field-meta.xml
<CustomField>
    <fullName>CP_TIPORI__c</fullName>
    <label>CP_TIPORI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>