force-app/main/default/objects/Temporal_Cobro_Pagos__c/fields/Descriipcion_Error__c.field-meta.xml
<CustomField>
    <fullName>Descriipcion_Error__c</fullName>
    <label>Descriipcion Error</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Descripcion_Error</valueSetName>
    </valueSet>
</CustomField>