force-app/main/default/objects/Temporal_Cobro_Pagos__c/fields/FechaCarga__c.field-meta.xml
<CustomField>
    <fullName>FechaCarga__c</fullName>
    <label>FechaCarga</label>
    <type>Date</type>
</CustomField>