force-app/main/default/objects/Temporal_Cobro_Pagos__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment</label>
    <referenceTo>Payment</referenceTo>
    <relationshipLabel>Temporal Cobro Pagos</relationshipLabel>
    <relationshipName>Temporal_Cobro_Pagos</relationshipName>
    <type>Lookup</type>
</CustomField>