force-app/main/default/objects/Temporal_Cobro_Pagos__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CP_ANO__c</columns>
    <columns>CP_ALUMNO__c</columns>
    <columns>CP_IMPORTE__c</columns>
    <columns>CP_TIPORI__c</columns>
    <columns>CP_FECHA__c</columns>
    <columns>CP_NUMORI__c</columns>
    <columns>CP_MEDPAGO__c</columns>
    <columns>Estado__c</columns>
    <columns>Tipo_Error__c</columns>
    <columns>Payment__c</columns>
    <columns>Descriipcion_Error__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Estado__c</field>
        <operation>equals</operation>
        <value>Error</value>
    </filters>
    <label>All Records</label>
</ListView>